# agri-gs-slam

./: .gitignore  LICENSE  README.md
config/: default.yaml
docker/: .env  Dockerfile  docker-compose.yml
scripts/: setup.sh
src/: camera.py  dashboard.py  dataloader.py  grapher.py  keyframe.py  loss.py  mapper.py  metrics.py  monitor.py  pipeline.py  splatter.py  strategy.py  tracker.py  viewer.py
src/odometry/: CMakeLists.txt
src/odometry/bindings/: pybind.cpp
src/odometry/include/dlo/: dlo.hpp
src/odometry/scripts/: example.py
src/odometry/src/dlo/: dlo.cpp
src/odometry/src/nano_gicp/: lsq_registration.cc  nano_gicp.cc  nanoflann.cc
src/scancontext/: CMakeLists.txt
src/scancontext/bindings/: pybind.cpp
src/scancontext/include/scancontext/: KDTreeVectorOfVectorsAdaptor.hpp  scancontext.hpp
src/scancontext/scripts/: test.py
src/scancontext/src/scancontext/: scancontext.cpp
src/utils/: gsplat_viewer.py  lib_bilagrid.py  utils.py
